# Otter

./: README.md  settings.gradle.kts
Demo/: build.gradle.kts
Demo/src/main/: AndroidManifest.xml
Demo/src/main/assets/animation/: lottie-sunny.json
Demo/src/main/assets/templates/animation-demo/: animation.xml
Demo/src/main/assets/templates/layout-demo/: layout.xml
Demo/src/main/assets/templates/list-demo/: list.xml
Demo/src/main/assets/templates/progress-demo/: progress.xml
Demo/src/main/assets/templates/scaffold-demo/: scaffold.xml
Demo/src/main/assets/templates/text-demo/: layout_text.xml
Demo/src/main/assets/templates/weather-card-demo/: weather-card.xml
Demo/src/main/res/drawable/: ic_cloudy.xml  ic_fog.xml  ic_nav.xml  ic_rainstorm.xml  ic_shower.xml  ic_sunny.xml  ic_warning.xml
Demo/src/main/res/layout/: activity_animation.xml  activity_layout_demo.xml  activity_layout_text_template.xml  activity_list_template.xml  activity_main.xml  activity_progress_template.xml  activity_scaffold_template.xml  activity_tab_layout_vp2.xml  activity_weather_card_template.xml  fragment_tab.xml  item_tab_gradient.xml
Demo/src/main/res/values/: strings.xml  themes.xml
Demo/src/main/res/values-night/: themes.xml
OTAndroid/: build.gradle.kts
OTAndroid/src/main/cpp/: CMakeLists.txt  OTATSNode.cpp  OTATSNode.h  OTAnalyze.cpp  OTAnalyze.h  OTJniAnalyze.cpp  OTValue.h  OTWordAnalyze.cpp  OTWordAnalyze.h
OTAndroid/src/main/res/values/: attrs.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+118 files in other folders)
